tests/rosetta/out/Swift/anagrams-deranged-anagrams.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:54:42Z
func sortRunes(_ s: String) -> String {
    var arr: [String] = [Any]()
    var i = 0
    while i < s.count {
        arr = arr + [Array(s[i..<i + 1])]
        i = i + 1
    }
    var n = arr.count
    var m = 0
    while m < n {
        var j = 0
        while j < n - 1 {
            if arr[j] > arr[j + 1] {
                let tmp = arr[j]
                arr[j] = arr[j + 1]
                arr[j + 1] = tmp
            }
            j = j + 1
        }
        m = m + 1
    }
    var out = ""
    i = 0
    while i < n {
        out = out + arr[i]
        i = i + 1
    }
    return out
}
func deranged(_ a: String, _ b: String) -> Bool {
    if a.count != b.count {
        return false
    }
    var i = 0
    while i < a.count {
        if Array(a[i..<i + 1]) == Array(b[i..<i + 1]) {
            return false
        }
        i = i + 1
    }
    return true
}
func main() {
    var words = ["constitutionalism", "misconstitutional"]
    var m: [String: [String]] = []
    var bestLen = 0
    var w1 = ""
    var w2 = ""
    for w in words {
        if w.count <= bestLen {
            continue
        }
        let k = sortRunes(w)
        if !(m.keys.contains(k)) {
            m[k] = [w]
            continue
        }
        for c in m[k]!.keys {
            if deranged(w, c) {
                bestLen = w.count
                w1 = c
                w2 = w
                break
            }
        }
        m[k] = m[k]! + [w]
    }
    print(w1 + " " + w2 + " : Length " + String(bestLen))
}
main()
